fixing annoying query attr filtering
Signed-off-by: Timothy Wood <tim@imaginesimplicity.com>

--- a/assets/style.css
+++ b/assets/style.css
@@ -54,4 +54,6 @@ div#wcsfl_wishlist div#wcsfl_header > span::before{
 	font-weight: normal;
 	-webkit-font-smoothing: antialiased;
 	margin-right: 4px;
+	top:1px;
+	position: relative;
 }
