--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,7 @@ div#wcsfl_banner{
 	position: fixed;
 	bottom:0px;
 	font-size: 10px;
+	z-index: 1000;
 }
 div#wcsfl_banner > .header{
 	padding:2px;
@@ -26,6 +27,9 @@ div#wcsfl_banner > .header{
 	background: #eee;
 	color: #666;
 	display:none;
+}
+div#wcsfl_banner > .header[data-icon]:before {
+	margin-right:4px;
 }
 div#wcsfl_banner > .products{
 	display:none;
@@ -41,6 +45,37 @@ div#wcsfl_banner > .products .banner-meta{
 }
 div#wcsfl_banner > .products .banner-items{
 	display: inline-block;
+}
+div#wcsfl_banner > .products .banner-items .product{
+	display: inline-block;
+	margin-right:10px;	
+	position: relative;
+	border:1px solid #bbb;
+	color: #666;
+	font-weight: bold;
+	text-decoration: none;
+	background: #fff;
+}
+div#wcsfl_banner > .products .banner-items .product img.wp-post-image{
+	opacity: .5;
+}
+div#wcsfl_banner > .products .banner-items .product span{
+	position: absolute;
+	top:4px;
+	right:4px;
+	font-size: 18px;
+	color:black;
+	display:none;
+}
+div#wcsfl_banner > .products .banner-items .product div{
+	position: absolute;
+	bottom: 0px;
+	width:100%;
+	height: 12px;
+	background: #eee;
+	text-align: center;
+	padding:2px 0;
+	display:none;
 }
 
 /**
@@ -65,5 +100,4 @@ div#wcsfl_banner [data-icon]:before {
 	font-style: normal;
 	font-weight: normal;
 	-webkit-font-smoothing: antialiased;
-	margin-right: 4px;
 }
