--- a/assets/style.less
+++ b/assets/style.less
@@ -3,6 +3,7 @@
  *
  */
 
+@css_colors_product_icon: #ffffff;
 @css_colors_border: #bbbbbb;
 @css_colors_header_bg: #eeeeee;
 @css_colors_header_text: #e6db55;
@@ -12,6 +13,7 @@
 
 // Modern Pictograms (http://thedesignoffice.org/project/modern-pictograms)
 @font-face {
+
     font-family: 'ModernPictogramsNormal';
     src: url('webfont/modernpics-webfont.eot');
     src: url('webfont/modernpics-webfont.eot?#iefix') format('embedded-opentype'),
@@ -20,9 +22,11 @@
          url('webfont/modernpics-webfont.svg#ModernPictogramsNormal') format('svg');
     font-weight: normal;
     font-style: normal;
+
 }
 
 .icons ( @size: 150% ) {
+
 	font-family: 'ModernPictogramsNormal';
 	content: attr(data-icon);
 	speak: none;
@@ -31,6 +35,7 @@
 	-webkit-font-smoothing: antialiased;
 	text-decoration: none;
 	font-size: @size;
+
 }
 
 // ul.products li.product a img.wcsfl-save-for-later{
@@ -41,10 +46,24 @@
 // 	visibility: hidden;
 // }
 
-.wcsfl_prod_add{
+.save_for_later{
+
+	&.product_image_overlay{
+
+		white-space: nowrap;
+		position: absolute;
+		top: 2px;
+		right: 4px;
+		max-width: 18px;
+		overflow: hidden;
+		color:white;
+		display:none;
+
+	}
 
 	&[data-icon]:before{
 		.icons;
+		color: @css_colors_product_icon;
 	}
 
 }
@@ -153,7 +172,7 @@ div#wcsfl_banner{
 
 				}
 
-				div{
+				div.quick_view{
 
 					position: absolute;
 					bottom: 0px;
@@ -163,7 +182,7 @@ div#wcsfl_banner{
 					text-align: center;
 					padding:2px 0;
 					display:none;
-					
+
 				}
 
 				.add_to_cart{
