--- a/assets/save-for-later.less
+++ b/assets/save-for-later.less
@@ -38,15 +38,11 @@
 
 }
 
-// ul.products li.product a img.wcsfl-save-for-later{
-// 	width:16px;
-// 	height:16px;
-// 	margin-top:-30px;
-// 	margin: -30px 0 0 10px;
-// 	visibility: hidden;
-// }
-
 .save_for_later{
+
+	&.button{
+		white-space: nowrap;
+	}
 
 	&.product_image_overlay{
 
