optimized save for later js and ajax hooks

--- a/assets/save-for-later.less
+++ b/assets/save-for-later.less
@@ -64,7 +64,7 @@
 
 }
 
-div#wcsfl_banner{
+div#wcsfl_dock{
 
 	width:100%;
 	position: fixed;
@@ -109,7 +109,7 @@ div#wcsfl_banner{
 
 		}
 
-		.banner-meta{
+		.dock-meta{
 
 			display: inline-block;
 			vertical-align: top;
@@ -138,7 +138,7 @@ div#wcsfl_banner{
 			}
 		}
 
-		.banner-items{
+		.dock-items{
 
 			display: inline-block;
 			vertical-align: top;
