prefix rename + new queries

--- a/assets/save-for-later.less
+++ b/assets/save-for-later.less
@@ -63,7 +63,7 @@
 	}
 
 }
-div#woocommerce_wishlist_myaccount{
+div#wc_wishlist_myaccount{
 	width:100%;
 
 	> .products{
@@ -106,7 +106,7 @@ div#woocommerce_wishlist_myaccount{
 		}
 	}
 }
-div#woocommerce_wishlist_dock{
+div#wc_wishlist_dock{
 
 	width:100%;
 	position: fixed;
