added new cart options to dock

--- a/assets/save-for-later.less
+++ b/assets/save-for-later.less
@@ -188,17 +188,17 @@ div#wc_wishlist_dock{
 				margin-right:5px;
 			}
 
-			.my_account{
+			.my_account, .view_cart{
 
 				font-size: 10px;
 				color:#ccc;
 				text-decoration: none;
 				display: block;
-				margin-top:10px;
+				margin-top:5px;
 
 			}
 
-			.my_account:before{
+			.my_account:before, .view_cart:before{
 				margin-right: 2px;
 			}
 		}
