from cart to wishlist

--- a/assets/save-for-later.less
+++ b/assets/save-for-later.less
@@ -191,7 +191,7 @@ div#wc_wishlist_dock{
 			.my_account, .view_cart{
 
 				font-size: 10px;
-				color:#ccc;
+				color:@css_colors_text;
 				text-decoration: none;
 				display: block;
 				margin-top:5px;
